file(GLOB_RECURSE _HDRS "*.hpp")
file(GLOB_RECURSE _SRCS "*.[hc]pp")
add_library(molecule OBJECT ${_HDRS} ${_SRCS})

if(PETSC_FOUND)
  include_directories(${PETSC_INCLUDES})
  target_link_libraries(molecule ${PETSC_LIBRARIES})
endif(PETSC_FOUND)
if(SLEPC_FOUND)
  include_directories(${SLEPC_INC})
  target_link_libraries(molecule ${SLEPC_LIB})
endif(SLEPC_FOUND)
if(Libint2_FOUND)
  target_link_libraries(molecule Libint2::cxx)
endif(Libint2_FOUND)
if(Eigen3_FOUND)
  target_link_libraries(molecule Eigen3::Eigen)
endif(Eigen3_FOUND)

target_link_libraries(molecule io)
if(POLYQUANT_CODE_COVERAGE)
  target_link_libraries(molecule coverage_config)
endif(POLYQUANT_CODE_COVERAGE)
# target_include_directories(molecule PUBLIC include) install( TARGETS molecule
# LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include/molecule)

# install(FILES ${_HDRS} DESTINATION include/molecule)
